# pumila

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: cmake-single-platform.yml
include/pumila/: action.h  chain.h  def.h  field.h  field2.h  field3.h  game.h  garbage.h  model_base.h  nn.h  pumila.h  window.h
include/pumila/models/: pumila1.h  pumila10.h  pumila11.h  pumila12.h  pumila13.h  pumila1n.h  pumila2.h  pumila3.h  pumila4.h  pumila5.h  pumila6.h  pumila6r.h  pumila7.h  pumila7r.h  pumila8.h  pumila8r.h  pumila8s.h  pumila9.h
notebook/: build.ipynb  player.ipynb  pumila1.ipynb  pumila10.ipynb  pumila11.ipynb  pumila12.ipynb  pumila13.ipynb  pumila14-1.ipynb  pumila14.ipynb  pumila1n.ipynb  pumila2.ipynb  pumila3.ipynb  pumila4.ipynb  pumila5.ipynb  pumila6.ipynb  pumila6r.ipynb  pumila7.ipynb  pumila7r.ipynb  pumila8-Copy2.ipynb  pumila8.ipynb  pumila8r.ipynb  pumila8s.ipynb  pumila9.ipynb
pumila/: __init__.py  learning.py  pumila14.py  replay.py  window.py
pumila-core/: pypumila.cc
pumila-core/include/pumila/: action.h  chain.h  def.h  field3.h  game.h  garbage.h  matrix.h  pumila.h  step.h
pumila-core/include/pumila/models/: common.h  pumila14.h
pumila-core/include/pumila/old/: model_base.h
pumila-core/include/pumila/old/models/: pumila2.h  pumila3.h  pumila5.h  pumila6.h  pumila7r.h  pumila8.h  pumila8r.h  pumila8s.h  pumila9.h
pumila-core/lib/: action.cc  chain.cc  field3.cc  game.cc
pumila-core/lib/models/: pumila14.cc
pumila-core/old/pumila/: drawing.h  field2.cc
pumila-core/old/pumila/models/: pumila1n.cc  pumila2.cc  pumila3.cc  pumila4.cc  pumila6r.cc  pumila7.cc  pumila8.cc
pumila-core/old/pypumila/: pypumila12.cc  pypumila5.cc  pypumila8.cc  pypumila8s.cc
pumila-core/old/sim/: main.cc
pumila-core/test/: field_test.cc  game_test.cc
src/play/: main.cc
src/pumila/: action.cc  chain.cc  drawing.h  field.cc  field2.cc  field3.cc  game.cc  model_base.cc  version.rc  window.cc
src/pumila/models/: pumila1.cc  pumila10.cc  pumila11.cc  pumila12.cc  pumila13.cc  pumila1n.cc  pumila2.cc  pumila3.cc  pumila4.cc  pumila5.cc  pumila6.cc  pumila6r.cc  pumila7.cc  pumila7r.cc  pumila8.cc  pumila8r.cc  pumila8s.cc  pumila9.cc
src/pypumila/: pumila1.cc  pumila2.cc  pypumila.cc  pypumila1.cc  pypumila10.cc  pypumila11.cc  pypumila12.cc  pypumila13.cc  pypumila2.cc  pypumila3.cc  pypumila4.cc  pypumila5.cc  pypumila6.cc  pypumila6r.cc  pypumila7.cc  pypumila7r.cc  pypumila8.cc  pypumila8r.cc  pypumila8s.cc  pypumila9.cc
src/sim/: main.cc
