[tool.poetry]
name = "pumila"
version = "0.1.0"
description = ""
authors = ["na-trium-144 <100704180+na-trium-144@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
jupyter = "^1.0.0"
tqdm = "^4.66.1"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
