[tool.poetry]
name = "pumila"
version = "0.1.0"
description = ""
authors = ["na-trium-144 <100704180+na-trium-144@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
tqdm = "^4.66.1"
matplotlib = "^3.8.2"
torch = {version = "^2.3.0+cpu", source = "pytorch-cpu"}
pygame = "^2.5.2"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
